# mystudio_c_plus_plus

./: .gitignore  README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  CallJavaHelper.cpp  CallJavaHelper.h  FaceTrack.cpp  LiveAudioChannel.cpp  LiveAudioChannel.h  LiveClient.cpp  LivePushClient.cpp  LiveVideoChannel.cpp  LiveVideoChannel.h  NativeFaceDetectClient.cpp  TigerFFmpeg.cpp  TigerFFmpeg.h  TigerPlayer.cpp  TigerPlayer.h  TigerPlayerClient.cpp  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  nativeClient.cpp  nativeDynamic.cpp  safe_queue.h  util.cpp  util.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/myapplication/: JavaHelper.java  MainActivity.java
app/src/main/java/com/example/myapplication/bean/: Constants.java  Student.java  VertexArray.java
app/src/main/java/com/example/myapplication/face/: Face.java  FaceTrack.java
app/src/main/java/com/example/myapplication/filter/: AbstractFilter.java  AbstractFrameFilter.java  BeautyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreeFilter.java  StickFilter.java
app/src/main/java/com/example/myapplication/listener/: OnErrorListener.java  OnPrepareListener.java  OnProgressListener.java
app/src/main/java/com/example/myapplication/live/: AudioChannel.java  CameraHelper.java  LiveActivity.java  LivePushClient.java  VideoChannel.java
app/src/main/java/com/example/myapplication/opengl/: CannyActivity.java  CannyGlsurfaceView.java  GLActivity.java  HomeActivity.java  LUTProgram.java  (+10 more)
app/src/main/res/layout/: activity_canny.xml  activity_glactivity.xml  activity_home.xml  activity_live.xml  activity_main.xml  activity_open_gl.xml  activity_phtoto_filter.xml  activity_player.xml  activity_rectangle.xml  activity_triangle.xml  activity_video.xml
app/src/main/res/raw/: bigeye_frag.frag  camera_frag.frag  camera_grey_frag.frag  camera_sqlit_frag.frag  camera_vertex.vert  rectangle_fragment_shader.glsl  rectangle_vertex_shader.glsl  triangle_fragment_shader.glsl
(+34 files in other folders)
